chore: add Indonesian language

--- a/locales/noi.lang.json
+++ b/locales/noi.lang.json
@@ -15,6 +15,7 @@
     { "code": "hu", "label": "Magyar" },
     { "code": "de", "label": "Deutsch" },
     { "code": "it", "label": "Italiano" },
+    { "code": "id", "label": "Indonesia" },
     { "code": "tr", "label": "Türkçe" }
   ]
 }
