--- a/locales/ru/app.json
+++ b/locales/ru/app.json
@@ -165,7 +165,7 @@
       "modifierKeys": "Модифицирующие клавиши",
       "regularKeys": "Обычные клавиши",
       "noiExtension": "Обратите внимание, что Noi не поддерживает полный спектр API расширений Chrome. Смотрите поддерживаемые API расширений для получения дополнительной информации о том, что поддерживается.",
-      "noiCacheMode": "Кеширует состояния веб-страниц для быстрого повторного доступа, аналогично вкладкам браузера. Непрерывное кеширование увеличивает использование памяти, особенно при частом доступе к различным ссылкам боковой панели. Чтобы снизить потребление памяти, особенно при замедлении системы, рассмотрите возможность отключения или перезапуска кэширования после многократных переключений.",
+      "noiCacheMode": "Кеширует состояния веб-страниц для быстрого повторного доступа, аналогично вкладкам браузера. Непрерывное кеширование увеличивает использование памяти, особенно при частом переходе между различными ссылками из боковой панели. Чтобы снизить потребление памяти, особенно при замедлении системы, рассмотрите возможность отключения или перезапуска кэширования после многократных переключений.",
       "promptLogLimit": "Максимальное количество сохраняемых промптов в журнале (от 10 до 1000), по умолчанию установлено 300.",
       "promptLogArchiveLimit_1": "Максимальное количество промптов, которое может быть сохранено в одном архивном файле (от 1000 до 10000), по умолчанию установлено 1000.",
       "promptLogArchiveLimit_2": "1. Файл, который в настоящее время архивируется: {{file}}.archiving.json",
